# Monitor

./: CMakeLists.txt  controller.cpp  controller.h  cpustat.h  datareader.cpp  datareader.h  datareader_l.cpp  datareader_l.h  idatareader.h  main.cpp  mainwindow.h  memstat.h  structs.h
UI/: mainwindow.cpp  mainwindow.h
content/: App.qml  CpuSpeedometer.qml  DiskSpeedometer.qml  MemSpeedometer.qml  Speedometer.qml
